# learning-tensorflow

./: pyproject.toml
models/: dnn_model.keras  my_new_model.keras  titanic_test.keras
models/saved_model/: fingerprint.pb  saved_model.pb
notebooks/: BasicImageClassification.ipynb  BasicRegression.ipynb  BasicTextClassification.ipynb  KerasBasics.ipynb  LoadingData.ipynb
notebooks/TensorFlowBasics/: AutomaticDifferentiation.ipynb  GraphsAndFunctions.ipynb  ModulesLayersModels.ipynb  Overview.ipynb  Tensors.ipynb  Variables.ipynb
