[project]
name = "learning-tensorflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pydot>=3.0.2",
    "seaborn>=0.13.2",
    "tensorflow",
]

[tool.uv.sources]
tensorflow = { url = "https://storage.googleapis.com/tensorflow/versions/2.16.2/tensorflow-2.16.2-cp312-cp312-macosx_10_15_x86_64.whl" }

[dependency-groups]
dev = [
    "jupyterlab-vim>=4.1.4",
]

